--- a/index.HTMl
+++ b/index.HTMl
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Three.js Draco Viewer with Automatic Model Loading</title>
+    <title>Three.js Model Viewer</title>
     <style>
         body { margin: 0; overflow: hidden; }
         canvas { display: block; }
+        /* Styles for the object switcher and arrows */
         .object-switcher {
             position: fixed;
             bottom: 20px;
@@ -75,27 +76,20 @@
     <div class="object-switcher" id="object-switcher">
     </div>
 
-    <script type="importmap">
-    {
-        "imports": {
-            "three": "https://unpkg.com/three@0.159.0/build/three.module.js",
-            "three/addons/": "https://unpkg.com/three@0.159.0/examples/jsm/"
-        }
-    }
-    </script>
+    <!-- Include Three.js and Add-ons -->
     <script type="module">
-        import * as THREE from 'three';
-        import { OrbitControls } from 'three/addons/controls/OrbitControls.js';
-        import { GLTFLoader } from 'three/addons/loaders/GLTFLoader.js';
-        import { DRACOLoader } from 'three/addons/loaders/DRACOLoader.js';
-        import { EffectComposer } from 'three/addons/postprocessing/EffectComposer.js';
-        import { RenderPass } from 'three/addons/postprocessing/RenderPass.js';
-        import { ShaderPass } from 'three/addons/postprocessing/ShaderPass.js';
+        import * as THREE from 'https://unpkg.com/three@0.159.0/build/three.module.js';
+        import { OrbitControls } from 'https://unpkg.com/three@0.159.0/examples/jsm/controls/OrbitControls.js';
+        import { GLTFLoader } from 'https://unpkg.com/three@0.159.0/examples/jsm/loaders/GLTFLoader.js';
+        import { DRACOLoader } from 'https://unpkg.com/three@0.159.0/examples/jsm/loaders/DRACOLoader.js';
+        import { EffectComposer } from 'https://unpkg.com/three@0.159.0/examples/jsm/postprocessing/EffectComposer.js';
+        import { RenderPass } from 'https://unpkg.com/three@0.159.0/examples/jsm/postprocessing/RenderPass.js';
+        import { ShaderPass } from 'https://unpkg.com/three@0.159.0/examples/jsm/postprocessing/ShaderPass.js';
 
         // Scene setup
         const scene = new THREE.Scene();
         scene.background = new THREE.Color(0x111111);
-        scene.fog = new THREE.FogExp2(0x111111, 0.02); // Very light exponential fog
+        scene.fog = new THREE.FogExp2(0x111111, 0.02);
 
         const camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
         camera.position.set(5, 5, 5);
@@ -110,7 +104,7 @@
         const composer = new EffectComposer(renderer);
         composer.setSize(window.innerWidth, window.innerHeight);
 
-        // Create the Chromatic Aberration Shader
+        // Chromatic Aberration Shader
         const ChromaticAberrationShader = {
             uniforms: {
                 'tDiffuse': { value: null },
@@ -205,17 +199,17 @@
         const controls = new OrbitControls(camera, renderer.domElement);
         controls.enableDamping = true;
 
-        // Global references
-        window.objectsLibrary = new Map();
-        window.currentObject = null;
-        let currentIndex = 0;
-
         // Loaders
         const dracoLoader = new DRACOLoader();
         dracoLoader.setDecoderPath('https://www.gstatic.com/draco/versioned/decoders/1.5.6/');
 
         const loader = new GLTFLoader();
         loader.setDRACOLoader(dracoLoader);
+
+        // Global references
+        window.objectsLibrary = new Map();
+        window.currentObject = null;
+        let currentIndex = 0;
 
         // Arrow controls
         const leftArrow = document.getElementById('leftArrow');
@@ -291,7 +285,7 @@
 
                 if (modelFiles.length > 0) {
                     currentIndex = 0;
-                    switchToObject(modelFiles[0]);
+                    switchToObject(modelFiles[0].replace(/\.[^/.]+$/, ""));
                 }
             } catch (error) {
                 console.error('Error loading models:', error);
@@ -302,10 +296,10 @@
             const url = `models/${fileName}`;
 
             return new Promise((resolve) => {
-                loader.load(url, function(gltf) {
+                loader.load(url, function (gltf) {
                     const object = gltf.scene;
 
-                    object.traverse(function(node) {
+                    object.traverse(function (node) {
                         if (node.isMesh) {
                             node.castShadow = true;
                             node.receiveShadow = true;
@@ -327,7 +321,7 @@
                     window.objectsLibrary.set(name, object);
 
                     resolve();
-                }, undefined, function(error) {
+                }, undefined, function (error) {
                     console.error('Error loading object:', error);
                     resolve();
                 });
