--- a/index.html
+++ b/index.html
@@ -5,14 +5,77 @@
     <style>
         body { margin: 0; overflow: hidden; }
         canvas { display: block; }
-        /* Your CSS styles here */
-        /* ... */
+        /* Styles for the object switcher and arrows */
+        .object-switcher {
+            position: fixed;
+            bottom: 20px;
+            left: 50%;
+            transform: translateX(-50%);
+            background: rgba(0, 0, 0, 0.7);
+            padding: 10px;
+            border-radius: 8px;
+            border: 1px solid #00ffff;
+            display: flex;
+            gap: 10px;
+            flex-wrap: wrap;
+            justify-content: center;
+            max-width: 80vw;
+        }
+        .object-button {
+            background: transparent;
+            color: #00ffff;
+            border: 1px solid #00ffff;
+            padding: 8px 16px;
+            border-radius: 4px;
+            cursor: pointer;
+            font-family: 'Courier New', monospace;
+            transition: all 0.3s ease;
+        }
+        .object-button:hover {
+            background: #00ffff22;
+        }
+        .object-button.active {
+            background: #00ffff;
+            color: black;
+        }
+
+        .arrow {
+            position: fixed;
+            top: 50%;
+            transform: translateY(-50%);
+            background: rgba(0, 0, 0, 0.7);
+            color: #00ffff;
+            border: 1px solid #00ffff;
+            padding: 20px;
+            font-family: 'Courier New', monospace;
+            font-size: 24px;
+            cursor: pointer;
+            text-shadow: 0 0 5px #00ffff;
+            box-shadow: 0 0 10px rgba(0, 255, 255, 0.3);
+            display: none;
+        }
+
+        .arrow.left {
+            left: 20px;
+        }
+
+        .arrow.right {
+            right: 20px;
+        }
+
+        .arrow:hover {
+            background: rgba(0, 255, 255, 0.1);
+        }
     </style>
 </head>
 <body>
 
-    <!-- Your HTML content (buttons, switcher, etc.) -->
-    <!-- ... -->
+    <!-- Arrow buttons -->
+    <button class="arrow left" id="leftArrow">◄</button>
+    <button class="arrow right" id="rightArrow">►</button>
+
+    <!-- Object switcher -->
+    <div class="object-switcher" id="object-switcher"></div>
 
     <!-- Import Map -->
     <script type="importmap">
@@ -24,7 +87,7 @@
     }
     </script>
 
-    <!-- Your JavaScript code -->
+    <!-- JavaScript code -->
     <script type="module">
         import * as THREE from 'three';
         import { OrbitControls } from 'three/addons/controls/OrbitControls.js';
@@ -33,8 +96,6 @@
         import { EffectComposer } from 'three/addons/postprocessing/EffectComposer.js';
         import { RenderPass } from 'three/addons/postprocessing/RenderPass.js';
         import { ShaderPass } from 'three/addons/postprocessing/ShaderPass.js';
-
-        // Your JavaScript code here
 
         // Scene setup
         const scene = new THREE.Scene();
@@ -95,8 +156,55 @@
         const chromaticAberrationPass = new ShaderPass(ChromaticAberrationShader);
         composer.addPass(chromaticAberrationPass);
 
-        // Lights setup
-        // ...
+        // Lights
+        const ambientLight = new THREE.AmbientLight(0xffffff, 0.5);
+        scene.add(ambientLight);
+
+        // Top-down spotlight
+        const topSpotlight = new THREE.SpotLight(0xffffff, 40);
+        topSpotlight.position.set(0, 10, 0);
+        topSpotlight.angle = Math.PI / 3;
+        topSpotlight.penumbra = 0.2;
+        topSpotlight.decay = 0.5;
+        topSpotlight.distance = 100;
+        topSpotlight.castShadow = true;
+        topSpotlight.shadow.bias = -0.001;
+        topSpotlight.shadow.mapSize.width = 2048;
+        topSpotlight.shadow.mapSize.height = 2048;
+        topSpotlight.target.position.set(0, 0, 0);
+        scene.add(topSpotlight);
+        scene.add(topSpotlight.target);
+
+        // Bottom-up spotlight
+        const bottomSpotlight = new THREE.SpotLight(0xffffff, 20);
+        bottomSpotlight.position.set(0, -10, 0);
+        bottomSpotlight.angle = Math.PI / 3;
+        bottomSpotlight.penumbra = 0.2;
+        bottomSpotlight.decay = 0.5;
+        bottomSpotlight.distance = 100;
+        bottomSpotlight.castShadow = true;
+        bottomSpotlight.shadow.bias = -0.001;
+        bottomSpotlight.shadow.mapSize.width = 2048;
+        bottomSpotlight.shadow.mapSize.height = 2048;
+        bottomSpotlight.target.position.set(0, 0, 0);
+        scene.add(bottomSpotlight);
+        scene.add(bottomSpotlight.target);
+
+        const rightLight = new THREE.PointLight(0xff0066, 20);
+        rightLight.position.set(8, 3, 0);
+        scene.add(rightLight);
+
+        const leftLight = new THREE.PointLight(0x0066ff, 20);
+        leftLight.position.set(-8, 3, 0);
+        scene.add(leftLight);
+
+        const rimLight = new THREE.SpotLight(0xffffff, 25);
+        rimLight.position.set(0, 2, -6);
+        rimLight.angle = Math.PI / 4;
+        rimLight.penumbra = 0.5;
+        rimLight.decay = 1;
+        rimLight.distance = 20;
+        scene.add(rimLight);
 
         // Controls
         const controls = new OrbitControls(camera, renderer.domElement);
@@ -115,19 +223,49 @@
         let currentIndex = 0;
 
         // Arrow controls
-        // ...
+        const leftArrow = document.getElementById('leftArrow');
+        const rightArrow = document.getElementById('rightArrow');
 
         function updateArrowVisibility() {
             const objects = Array.from(window.objectsLibrary.keys());
-            // Update arrow visibility logic
-            // ...
+            leftArrow.style.display = currentIndex > 0 ? 'block' : 'none';
+            rightArrow.style.display = currentIndex < objects.length - 1 ? 'block' : 'none';
         }
+
+        leftArrow.onclick = () => {
+            if (currentIndex > 0) {
+                currentIndex--;
+                const objects = Array.from(window.objectsLibrary.keys());
+                switchToObject(objects[currentIndex]);
+            }
+        };
+
+        rightArrow.onclick = () => {
+            const objects = Array.from(window.objectsLibrary.keys());
+            if (currentIndex < objects.length - 1) {
+                currentIndex++;
+                switchToObject(objects[currentIndex]);
+            }
+        };
 
         function updateObjectSwitcher() {
             const switcher = document.getElementById('object-switcher');
             switcher.innerHTML = '';
-            // Update object switcher logic
-            // ...
+            window.objectsLibrary.forEach((object, name) => {
+                const button = document.createElement('button');
+                button.className = 'object-button';
+                if (window.currentObject === object) {
+                    button.classList.add('active');
+                }
+                button.textContent = name;
+                button.onclick = () => {
+                    const objects = Array.from(window.objectsLibrary.keys());
+                    currentIndex = objects.indexOf(name);
+                    switchToObject(name);
+                };
+                switcher.appendChild(button);
+            });
+            updateArrowVisibility();
         }
 
         function switchToObject(name) {
@@ -138,8 +276,10 @@
             if (name && window.objectsLibrary.has(name)) {
                 window.currentObject = window.objectsLibrary.get(name);
                 scene.add(window.currentObject);
-                // Update lights target
-                // ...
+                rimLight.target = window.currentObject;
+                scene.add(rimLight.target);
+                topSpotlight.target = window.currentObject;
+                bottomSpotlight.target = window.currentObject;
             }
 
             updateObjectSwitcher();
@@ -209,8 +349,8 @@
                 window.currentObject.rotation.y += 0.005;
 
                 const angle = window.currentObject.rotation.y;
-                // Update rim light position
-                // ...
+                rimLight.position.x = Math.sin(angle) * 6;
+                rimLight.position.z = -Math.cos(angle) * 6;
             }
 
             composer.render();
