--- a/index.html
+++ b/index.html
@@ -1,10 +1,48 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Three.js Model Viewer</title>
+    <title>TCG Tester</title>
     <style>
-        body { margin: 0; overflow: hidden; }
+        body { margin: 0; overflow: hidden; background-color: #111; }
         canvas { display: block; }
+
+        /* Styles for the loading bar */
+        #loadingOverlay {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: #111;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            z-index: 9999;
+            flex-direction: column;
+            font-family: 'Press Start 2P', cursive;
+            color: #00ff00;
+            text-align: center;
+        }
+
+        #loadingBarContainer {
+            width: 80%;
+            max-width: 400px;
+            height: 24px;
+            border: 4px solid #00ff00;
+            background: #000;
+            box-sizing: border-box;
+            margin-top: 20px;
+        }
+
+        #loadingBar {
+            width: 0%;
+            height: 100%;
+            background: #00ff00;
+        }
+
+        /* 16-bit style font */
+        @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
+
         /* Styles for the object switcher and arrows */
         .object-switcher {
             position: fixed;
@@ -70,6 +108,14 @@
 </head>
 <body>
 
+    <!-- Loading Overlay -->
+    <div id="loadingOverlay">
+        <div>Loading...</div>
+        <div id="loadingBarContainer">
+            <div id="loadingBar"></div>
+        </div>
+    </div>
+
     <!-- Arrow buttons -->
     <button class="arrow left" id="leftArrow">◄</button>
     <button class="arrow right" id="rightArrow">►</button>
@@ -95,15 +141,22 @@
         import { DRACOLoader } from 'three/addons/loaders/DRACOLoader.js';
         import { EffectComposer } from 'three/addons/postprocessing/EffectComposer.js';
         import { RenderPass } from 'three/addons/postprocessing/RenderPass.js';
-        import { ShaderPass } from 'three/addons/postprocessing/ShaderPass.js';
+        import { UnrealBloomPass } from 'three/addons/postprocessing/UnrealBloomPass.js';
 
         // Scene setup
         const scene = new THREE.Scene();
         scene.background = new THREE.Color(0x111111);
         scene.fog = new THREE.FogExp2(0x111111, 0.02);
 
-        const camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
-        camera.position.set(5, 5, 5);
+        // Camera setup
+        const camera = new THREE.PerspectiveCamera(
+            35, // Reduced FOV for longer lens effect
+            window.innerWidth / window.innerHeight,
+            0.1,
+            1000
+        );
+        camera.position.set(24, 0, 0); // Position camera to the side
+        camera.lookAt(0, 0, 0); // Look at the center of the scene/object
 
         const renderer = new THREE.WebGLRenderer({ antialias: true });
         renderer.setSize(window.innerWidth, window.innerHeight);
@@ -115,53 +168,25 @@
         const composer = new EffectComposer(renderer);
         composer.setSize(window.innerWidth, window.innerHeight);
 
-        // Chromatic Aberration Shader
-        const ChromaticAberrationShader = {
-            uniforms: {
-                'tDiffuse': { value: null },
-                'offset': { value: new THREE.Vector2(0.005, 0.005) }
-            },
-            vertexShader: /* glsl */`
-                varying vec2 vUv;
-                void main() {
-                    vUv = uv;
-                    gl_Position = projectionMatrix * modelViewMatrix * vec4( position, 1.0 );
-                }
-            `,
-            fragmentShader: /* glsl */`
-                uniform sampler2D tDiffuse;
-                uniform vec2 offset;
-                varying vec2 vUv;
-
-                void main() {
-                    vec2 center = vec2(0.5, 0.5);
-                    float dist = distance(vUv, center);
-
-                    // Increase effect towards edges
-                    vec2 aberration = offset * pow(dist, 4.0) * 2.0;
-
-                    float r = texture2D(tDiffuse, vUv + aberration).r;
-                    float g = texture2D(tDiffuse, vUv).g;
-                    float b = texture2D(tDiffuse, vUv - aberration).b;
-
-                    gl_FragColor = vec4(r, g, b, 1.0);
-                }
-            `
-        };
-
-        // Post-processing passes
+        // Render Pass
         const renderPass = new RenderPass(scene, camera);
         composer.addPass(renderPass);
 
-        const chromaticAberrationPass = new ShaderPass(ChromaticAberrationShader);
-        composer.addPass(chromaticAberrationPass);
+        // Bloom Pass (adjust parameters as needed)
+        const bloomPass = new UnrealBloomPass(
+            new THREE.Vector2(window.innerWidth, window.innerHeight),
+            0.24, // Bloom strength
+            0.5,  // Radius
+            0.2   // Threshold
+        );
+        composer.addPass(bloomPass);
 
         // Lights
         const ambientLight = new THREE.AmbientLight(0xffffff, 0.5);
         scene.add(ambientLight);
 
         // Top-down spotlight
-        const topSpotlight = new THREE.SpotLight(0xffffff, 40);
+        const topSpotlight = new THREE.SpotLight(0xffffff, 30);
         topSpotlight.position.set(0, 10, 0);
         topSpotlight.angle = Math.PI / 3;
         topSpotlight.penumbra = 0.2;
@@ -206,6 +231,15 @@
         rimLight.distance = 20;
         scene.add(rimLight);
 
+        // Floor
+        const floorGeometry = new THREE.PlaneGeometry(100, 100);
+        const floorMaterial = new THREE.MeshStandardMaterial({ color: 0x333333, side: THREE.DoubleSide });
+        const floor = new THREE.Mesh(floorGeometry, floorMaterial);
+        floor.rotation.x = -Math.PI / 2; // Rotate to lay it flat
+        floor.position.y = -12; // Floor position
+        floor.receiveShadow = true; // Allow the floor to receive shadows
+        scene.add(floor);
+
         // Controls
         const controls = new OrbitControls(camera, renderer.domElement);
         controls.enableDamping = true;
@@ -214,7 +248,26 @@
         const dracoLoader = new DRACOLoader();
         dracoLoader.setDecoderPath('https://www.gstatic.com/draco/versioned/decoders/1.5.6/');
 
-        const loader = new GLTFLoader();
+        // Loading Manager
+        const loadingManager = new THREE.LoadingManager();
+        const loadingBar = document.getElementById('loadingBar');
+        const loadingOverlay = document.getElementById('loadingOverlay');
+
+        loadingManager.onProgress = function (url, itemsLoaded, itemsTotal) {
+            const progress = (itemsLoaded / itemsTotal) * 100;
+            loadingBar.style.width = progress + '%';
+        };
+
+        loadingManager.onLoad = function () {
+            loadingOverlay.style.display = 'none';
+            animate();
+        };
+
+        loadingManager.onError = function (url) {
+            console.error('There was an error loading ' + url);
+        };
+
+        const loader = new GLTFLoader(loadingManager); // Pass loadingManager here
         loader.setDRACOLoader(dracoLoader);
 
         // Global references
@@ -326,7 +379,7 @@
                     const scale = 5 / maxDim;
                     object.scale.multiplyScalar(scale * 2);
 
-                    object.rotation.x = THREE.MathUtils.degToRad(2);
+                    object.rotation.x = THREE.MathUtils.degToRad(0.5);
 
                     const name = fileName.replace(/\.[^/.]+$/, "");
                     window.objectsLibrary.set(name, object);
@@ -346,7 +399,7 @@
             controls.update();
 
             if (window.currentObject) {
-                window.currentObject.rotation.y += 0.002;
+                window.currentObject.rotation.y += 0.0005
 
                 const angle = window.currentObject.rotation.y;
                 rimLight.position.x = Math.sin(angle) * 6;
@@ -355,7 +408,6 @@
 
             composer.render();
         }
-        animate();
 
         window.addEventListener('resize', function() {
             camera.aspect = window.innerWidth / window.innerHeight;
