Revert "please work"
This reverts commit 20e9d97d94d4f4af2316192f568af5c0fd5c34a1.

--- a/index.html
+++ b/index.html
@@ -406,7 +406,7 @@
                     const scale = 5 / maxDim;
                     object.scale.multiplyScalar(scale * 2);
 
-                    object.rotation.z = THREE.MathUtils.degToRad(-5);
+                    object.rotation.x = THREE.MathUtils.degToRad(-5);
 
                     const name = fileName.replace(/\.[^/.]+$/, "");
                     window.objectsLibrary.set(name, object);
